[package]
name = "rocket-jwt"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
jsonwebtoken = "8"
syn = "1.0"
quote = "1.0"
darling = "0.13"
proc-macro2 = "1.0"


[dev-dependencies]
rocket = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_derive = { version = "1.0" }
trybuild = "1.0"

[build-dependencies]
version_check = "0.9"
yansi = "0.5"

[[example]]
name = "rocket-jwt-demo"
path = "examples/rocket-jwt-demo/src/main.rs"