[package]
name = "rocket-jwt"
version = "0.4.0"
edition = "2021"
authors = ["Yaxian <yaxian.gu@gmail.com>"]
repository = "https://github.com/Yaxian/rocket-jwt"
readme = "./README.md"
license = "MIT"
keywords = ["rocket", "authorization", "jwt", "jswonwebtoken"]
categories = ["parser-implementations", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
jsonwebtoken = "8"
syn = "1.0"
quote = "1.0"
darling = "0.13"
proc-macro2 = "1.0"
serde = { version = "1.0", features = ["derive"] }


[dev-dependencies]
rocket = "0.4"
trybuild = "1.0"

[build-dependencies]
version_check = "0.9"
yansi = "0.5"

[[example]]
name = "rocket-jwt-demo"
path = "examples/rocket-jwt-demo/src/main.rs"