[package]
name = "rocket-jwt"
version = "0.5.1"
edition = "2021"
authors = ["Yaxian <yaxian.gu@gmail.com>"]
repository = "https://github.com/Yaxian/rocket-jwt"
readme = "./README.md"
license = "MIT"
keywords = ["rocket", "authorization", "jwt", "jswonwebtoken"]
categories = ["parser-implementations", "web-programming"]
description = "jwt authorization for rocket"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
jsonwebtoken = "8"
syn = "1"
quote = "1"
serde = { version = "1", features = ["derive"] }


[dev-dependencies]
rocket = "0.5.0-rc.3"
trybuild = "1.0"

[build-dependencies]
version_check = "0.9"
yansi = "0.5"

[[example]]
name = "rocket-jwt-demo"
path = "examples/rocket-jwt-demo/src/main.rs"